# synx_mt5_mcp

./: .env.example  .gitignore  DUAL_BRIDGE_ARCHITECTURE.md  Dockerfile  LICENSE  README.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml  test_all_tools.py
.github/workflows/: ci.yml  deploy.yml
config/: synx.example.yaml
config/profiles/: analyst.yaml  executor.yaml  full.yaml  read_only.yaml
config/risk/: aggressive.yaml  conservative.yaml  moderate.yaml  testing.yaml
docker/: Dockerfile.wine  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  CHANGES.md  CONFIG.md  CONTRIBUTING.md  IMPLEMENTATION.md  PYTHON_API_BOUNDARY.md  RISK.md  SECURITY.md  SETUP.md  THREAT_MODEL.md  TROUBLESHOOTING.md
mql5/: SYNX_EA.ex5  SYNX_EA.mql5
src/synx_mt5/: __init__.py  cli.py  config.py  server.py
src/synx_mt5/audit/: __init__.py  engine.py
src/synx_mt5/bridge/: base.py  composite.py  ea_file.py  ea_file_ipc.py  ea_rest.py  factory.py  metaeditor.py  python_com.py  wine.py
src/synx_mt5/idempotency/: engine.py
src/synx_mt5/intelligence/: __init__.py  correlation.py  memory.py  mql5_codegen.py  regime.py  strategy_context.py
src/synx_mt5/resources/: __init__.py  guides.py  prompts.py
src/synx_mt5/risk/: __init__.py  circuit_breaker.py  hitl.py  preflight.py  sizing.py
src/synx_mt5/security/: __init__.py  capability.py  injection_shield.py  rate_limiter.py  secrets.py  tool_validator.py
src/synx_mt5/tools/: __init__.py  chart_control.py  connection.py  execution.py  history.py  intelligence.py  market_data.py  market_depth.py  mql5_dev.py  positions.py  registry.py  risk_tools.py  strategy_tester.py  terminal_mgmt.py  tick_streamer.py
tests/: README.md
tests/adversarial/: __init__.py  test_duplicate_orders.py  test_injection_attacks.py
tests/integration/: test_bridge_mock.py  test_ea_bridge.py  test_mcp_protocol.py
tests/unit/: test_audit_engine.py  test_chart_control.py  test_circuit_breaker.py  test_correlation.py  test_ea_rest_bridge.py  test_hitl.py  test_idempotency.py  test_intelligence.py  test_market_depth.py  test_mql5_dev.py  test_preflight.py  test_risk.py  test_security.py  test_sizing.py  test_strategy_tester.py  test_terminal_mgmt.py  test_wine_bridge.py
